# TFY4345-project-2-H2021

./: Nummerisk prosjekt Sindre Lothe.ipynb  README.md
klasmek/: pyproject.toml
klasmek/tests/: test_klasmek.py
