[tool.poetry]
name = "klasmek"
version = "0.1.0"
description = ""
authors = ["Sindre Lothe <sindrl@online.no>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
scipy = "^1.7.2"
jupyter = "^1.0.0"
ipykernel = "^6.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
